<resources>
    <string name="app_name">Laptop 365</string>
    <string name="title_products">Product</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="title_report">Report</string>
    <string name="title_setting">Settings</string>

    <!--Login-->
    <string name="login_title">Mobile 247</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="clear_button_text">Clear</string>
    <string name="dialog_login_error_title">Error</string>
    <string name="dialog_login_error_message">Username or password was incorrect</string>

    <!--Config Screen-->
    <string name="config_title">Config Screen</string>
    <string name="server_hint">Server</string>
    <string name="port_hint">Port</string>
    <string name="save_button_text">Login</string>
    <string name="dialog_config_error_title">Error</string>
    <string name="dialog_config_error_message">You need config server</string>
    <string name="content_default_server">192.168.1.5</string>
    <string name="content_default_port">8080</string>
    <string name="save_config_success">Config saved successfully</string>
    <!--Common-->
    <string name="ok">OK</string>"
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="all">---ALL---</string>
    <string name="require_field">Required Field!</string>


    <!--Setting-->
    <string name="logout">Logout</string>
    <string name="dialog_logout_confirm_title">Logout</string>
    <string name="dialog_logout_confirm_message">Are you sure?</string>
    <string name="sort_status">Sort: %1$s</string>
    <string name="label_limit_offset">Limit products: %1$s</string>
    <string name="label_limit_dashboard">Limit dashboard: %1$s</string>
    <string name="save_setting_success">Setting saved successfully</string>
    <!--Product-->
    <string name="product_list_title">Products</string>
    <string name="message_api_error">API error</string>
    <string name="label_paging">Page %1$s</string>

    <!--Product Detail-->
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_import_price">Import Price</string>
    <string name="hint_product_sale_price">Sale Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_images">Images</string>
    <string name="hint_product_description">Description</string>
    <string name="buttonSave">Save</string>
    <string name="buttonClear">Clear</string>
    <string name="dialog_update_product_title">Update Product</string>
    <string name="dialog_update_product_message">Update product successfully</string>

    <!--Add product bottom sheet-->
    <string name="dialog_add_product_title">Add Product</string>
    <string name="dialog_add_product_message">Add product successfully</string>
    <string name="dialog_select_image_title">Select Images</string>
    <string name="dialog_select_image_message">Maximum 3 images</string>

    <!--Add category bottom sheet-->
    <string name="hint_cate_name">Category name</string>
    <string name="hint_cate_des">Category description</string>
    <string name="dialog_add_cate_title">Add New Category</string>
    <string name="dialog_add_cate_message_successfully">Add New Category successfully</string>

    <!--Orders-->
    <string name="order_list_title">Orders</string>
    <string name="hint_date_from">Date from</string>
    <string name="hint_date_to">Date to</string>

    <!--Date time picker-->
    <string name="title_select_date">Select Date</string>
    <string name="title_select_time">Select time</string>

    <!--Orders Details Bottom Sheet-->
    <string name="label_order_id">Order Id: %1$s</string>
    <string name="label_order_date">Order Date: %1$s</string>
    <string name="label_order_final_price">Final price: %1$s</string>
    <string name="label_order_status">Status: %1$s</string>

    <string name="label_unit_price">Unit price: %1$s</string>
    <string name="label_quantity">Quantity: %1$s</string>
    <string name="label_total_price">Total price: %1$s</string>

    <string name="dialog_update_order_title">Update Product</string>
    <string name="dialog_update_order_message">Update product successfully</string>

    <!--DashBoard-->
    <string name="label_pieChart_product_by_cate">Products by Category</string>
    <string name="label_pieChart_numOfProduct_by_cate">%1$s %2$s items</string>

    <string name="label_outOfStock_product_quantity">Quantity: %1$s</string>
    <string name="label_bestSales_product_quantity">Best Sales: %1$s unit</string>
    <string name="label_bestSales_product_quantity_units">Best Sales: %1$s units</string>

    <string name="label_dashboard_product_divider">Products</string>
    <string name="label_dashboard_latest_order_divider">Latest Orders</string>
    <string name="label_dashboard_nearly_outOfStock_divider">Nearly Out Of Stock</string>
    <string name="label_dashboard_bestSales_divider">Best Sales</string>
    <string name="label_dashboard_nearly_income_divider">Income</string>
    <string name="label_dashboard_income_month_divider">Monthly income</string>

    <string name="label_total_order_today_title"><![CDATA[Up to now <font color=#FF0000>%1$s</font> you have:]]></string>
    <string name="label_total_order_today"><![CDATA[There are <font color=#FF0000>%1$s</font> orders]]></string>
    <string name="label_total_income_today"><![CDATA[Income: <font color=#FF0000>%1$s</font> ]]></string>

    <string name="label_latest_order_id">Id: %1$s</string>
    <string name="label_latest_order_createdTime">Created: %1$s</string>
    <string name="label_latest_order_finalPrice">Final Price: %1$s</string>
    <string name="label_latest_order_status">Status: %1$s</string>

    <!--Report-->
    <string name="label_sales_report_divider">Sales Report</string>
    <string name="label_revenue_profit_report_product_divider">Revenue &amp; Profit Report</string>
    <string name="dialog_select_date_error_title">Select Date</string>
    <string name="dialog_select_date_error_message">Please select date</string>
    <string name="label_report_revenue_title">Revenue</string>
    <string name="label_report_profit_title">Profit</string>
    <string name="label_report_product_sales_title">Product Sales</string>

    <string name="label_report_revenue_header_title">Revenue from %1$s to %2$s</string>
    <string name="label_report_profit_header_title">Profit from %1$s to %2$s</string>
    <string name="label_report_product_sales_header_title">Product Sales from %1$s to %2$s</string>
</resources>