<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_home_white_36dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_order_white_36dp"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_white_36dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report_white_36dp"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting_white_36dp"
        android:title="@string/title_setting" />

</menu>