<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <com.google.android.material.textview.MaterialTextView
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:text="192.168.1.5"
                android:id="@+id/serverEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_hint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:text="8080"
                android:id="@+id/portEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:text="@string/buttonSave" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/cancel" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>