<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="SpUsage" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:visibility="visible" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_alignParentStart="true"

                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/bg_default_spinner"
                    android:id="@+id/spinnerCate" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_date_from"
                    android:textSize="@dimen/_12sdp"
                    android:layout_below="@+id/spinnerCate"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="match_parent"
                    android:id="@+id/editTextDateFrom"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:layout_toRightOf="@+id/editTextDateFrom"
                    android:hint="@string/hint_date_to"
                    android:textSize="@dimen/_12sdp"
                    android:layout_below="@+id/spinnerCate"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="match_parent"
                    android:id="@+id/editTextDateTo"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvCancel"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_toRightOf="@+id/buttonSearch"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    app:srcCompat="@drawable/ic_cancel_circle_36"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_toRightOf="@+id/spinnerCate"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textAllCaps="false"
                    android:id="@+id/buttonSearch"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHeader"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_below="@+id/editTextDateFrom"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_list_title"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/black" />

            </RelativeLayout>


        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:itemCount="9"
        app:spanCount="3"
        tools:listitem="@layout/view_holder_order_item" />


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

